# Aiogram3-Async-Gspread-Bot

./: Dockerfile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: Dockerfile  bot.py  pyproject.toml
bot/handlers/: group_checker.py
handlers/: group_checker.py
nginx/: nginx.conf
shared/: config.py
shared/utils/: gsheets.py  re_msg.py
utils/: currency.py  gsheets.py  re_msg.py
webapp/: Dockerfile  main.py  pyproject.toml
webapp/api/: routes.py
webapp/schemas/: forms.py
webapp/static/: index.html
webapp/static/css/: style.css
webapp/static/js/: app.js
